<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_item_back"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_arrow_back_24"
        android:title="@string/menu_item_back"
        android:titleCondensed="@string/menu_item_back"
        android:visible="false"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/menu_item_refresh"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:title="@string/menu_item_refresh"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/menu_item_search"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/menu_item_search"
        android:titleCondensed="@string/menu_item_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
</menu>