<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:id="@+id/cardview_card_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/card_imageview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/card_imageview_description"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/card_image_description_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/card_image_description_textview"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#3F51B5"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:text="a sunny day and all that and stuff" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_info_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/card_heading_textview"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/card_heading_textview"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Photographer: " />

            <TextView
                android:id="@+id/card_photographer_textview"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center|start"
                android:lines="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/card_details_button"
                app:layout_constraintStart_toEndOf="@+id/card_heading_textview"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Name" />

            <ImageButton
                android:id="@+id/card_details_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/white"
                android:contentDescription="@string/card_details_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@android:drawable/ic_menu_info_details"
                app:tint="#000000" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>